--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 #siteContainer{
-	width:auto ;
+	width:auto;
 	background-color: #f3ecde;
-	margin:auto;
+	padding:0px;
 }
+
+/*.................................Header All Pages................................*/
 #topBar{
 	width: auto;
 	height:45px;
@@ -16,6 +18,7 @@
 	height:392px;
 	width: auto;
 	background-image: url("../images/heroCrackedOpen.jpg");
+	margin-bottom:20px;
 }
 
 #headerLogo{
@@ -25,18 +28,32 @@
 
 }
 
-#headerNav{
-	width: auto;
+#headerNav {
+
 	height:70px;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
-	
+	justify-content: space-between;	
 }
-.headerButton{
-	font-family: 'Merriweather', serif;
-	font-size: 24pt;
 
+.headerButton  {
+
+	display: flex;
+	flex-direction: column;
+	margin:auto;
+	color:  #f3ecde;
+	font-family: 'Merriweather', serif;
+	font-size: 20pt;
+	padding:10px;
+	margin-left: 40px;
+	margin-right: 40px;
+	text-decoration:none;
+
+}
+.headerButton:hover{
+	border-radius:5px;
+	border-width: 2px;
+	border-style: dashed;
 }
 
 #imgCycler{
@@ -50,89 +67,187 @@
 
 .imgButtons{
 	border-radius: 5px;
-	margin: 20px 42px;
+	margin: 10px 42px 30px;
 	height: 42px;
 	width: 42px;
 	background-color: #ffbd2e;
 }
+/*........................ Header all pages End..........................*/
 
-#newsSection{
-	padding: 25px;
 
-}
-
-#heroImage{
-	height: 430px;
-	background-color: #636363;
-}
-
-#belowHero{
+/*................Index..................Index..................Index.....................*/
+#adHeadline1{
+	padding:50px 150px;
+	background-color: #3c3a35;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
-	height: 85px;
-	background-color: #8b8b8b;
-	color: #e0e0e0;
-	padding: 25px;
+	justify-content: space-around;
+	align-content: center;
 
 }
+
 
 #headlineText{
-	font-size: 48px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-content: center;
+	text-align: center;
+
 }
 
-#authorCredit{
-	font-size: 24px;
-	text-align: right;
+.headline1{
+	font-size: 62px;
+	font-family: 'Oswald', sans-serif;
+	color: #f3ecde;
+	
 }
 
-#articleBody{
-	padding: 25px;
-	width:70%;
-	background-color: #8b8b8b;
-	color:  #343434;
-	font-size: 20px;
+#headline2{
+	font-size: 58px;
+	text-align: center;
+	margin-top:35px;
+	margin-bottom: 10px;
+	font-family: 'Galada', cursive;
+	color:#ffbd2e;
+
 }
 
-#adSideBar{
-	background-color: #343434;
-	height:auto;
-	width: 22%;
+#headlineImages{
+	height: 110px;
+	animation-duration: 1.5s;
+	animation-name: appear;
 }
 
-#body {
+@keyframes appear{
+	from {
+		opacity: 0.1;
+		margin-top:-40px;
+	}
+
+	to {
+		opacity: 1;
+		margin-top:0px;
+	}
+}
+
+#headlineImages img{
+
+	width: 230px;
+}
+
+#adHeadline2{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	margin: 0px 150px;
+}
+
+#adButton {
+	font-family: 'Oswald', sans-serif;
+	margin: 45px;
+	font-size: 30px;
+	text-decoration:none;
+	padding: 15px;
+	color:#3c3a35;
+	border-radius: 15px;
+	border:2px dashed #3c3a35 ;
+
+}
+
+#certifications{
+	background-image: url("../images/quality.jpg");
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	padding: 25px ;
-	padding-top: 0px;
+	padding: 0px 150px;
 }
 
+
+
+
+#certRight{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 510px;
+	text-align: right;
+
+}
+
+#certText{
+	font-size:20px;
+	margin-top: 40px;
+	margin-bottom: 10px;
+	color:#f3ecde;;
+}
+
+#certButton {
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
+	margin: 40px;
+	font-size: 30px;
+	text-decoration:none;
+	padding: 15px;
+	color:#f3ecde;
+	border-radius: 15px;
+	border:2px dashed #f3ecde;
+
+}
+
+#certHeadline{
+	margin:20px;
+}
+
+#qualitySafe{
+
+	margin-top: 20px;
+	font-size: 62px;
+	font-family: 'Oswald', sans-serif;
+	color: #f3ecde;
+
+}
+
+#guareggteed{
+	font-size: 58px;
+	margin-top:35px;
+	margin-bottom: 10px;
+	font-family: 'Galada', cursive;
+	color:#ffbd2e;
+}
+
+/*........................................index End...............................................*/
+
+
+/*................................Footer all pages................................................*/
 #footer{
+	width: auto;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	height: 180px;
 	background-color: #343434;
-	padding: 25px
+	padding: 25px;
+	margin-top:100px;
 }
 
-#footerLogo{
-	width: 300px; 
-	background-color: #e0e0e0;
-}
 
-#footerNav{
+.footerNav{
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
-	width:510px;
-	margin:auto 25px;
+	justify-content: space-around;
+	width: 510px;
+	margin:auto 55px;
 }
+
 
 .footerNavButtons{
 	width:42px;
 	height: 42px;
-	background-color: #8b8b8b;
+	background-color: #f3ecde;
+
+	border-radius: 5px;
 
 }
+
+/*..............................Footer all pages End...............................................*/
